force-app/main/default/objects/CompetitorPrice__c/CompetitorPrice__c.object-meta.xml
<CustomObject>
    <description>유지류 경쟁사 상품 가격</description>
    <label>경쟁사 시세 현황</label>
    <nameField>
        <label>PriceListName</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>