force-app/main/default/objects/CompetitorPrice__c/fields/CJ__c.field-meta.xml
<CustomField>
    <fullName>CJ__c</fullName>
    <label>CJ</label>
    <referenceTo>CJOilPrice__c</referenceTo>
    <relationshipLabel>CompetitorPrice</relationshipLabel>
    <relationshipName>CompetitorPrice</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>