force-app/main/default/objects/CompetitorPrice__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <label>Competitor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Competitor__c.Name</field>
            <operation>equals</operation>
            <valueField>Competitor__c.Name</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipLabel>CompetitorPrice</relationshipLabel>
    <relationshipName>CompetitorPrice</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>