force-app/main/default/objects/CompetitorPrice__c/fields/fm_IsCJ__c.field-meta.xml
<CustomField>
    <fullName>fm_IsCJ__c</fullName>
    <formula>Competitor__r.IsCJ__c</formula>
    <label>fm_IsCJ</label>
    <type>Checkbox</type>
</CustomField>