force-app/main/default/objects/CompetitorPrice__c/fields/fm_PriceEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>fm_PriceEffectiveDate__c</fullName>
    <formula>Date(Value(Year__c), Value(Text(Month__c)), 1)</formula>
    <label>fm_PriceEffectiveDate</label>
    <type>Date</type>
</CustomField>