force-app/main/default/objects/CompetitorPrice__c/fields/fm_RetailPriceGap__c.field-meta.xml
<CustomField>
    <fullName>fm_RetailPriceGap__c</fullName>
    <formula>RetailPrice__c - CJ__r.RetailPrice__c</formula>
    <label>fm_RetailPriceGap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>