force-app/main/default/objects/CompetitorPrice__c/fields/fm_WholesalePriceGap__c.field-meta.xml
<CustomField>
    <fullName>fm_WholesalePriceGap__c</fullName>
    <formula>WholesalePrice__c  - CJ__r.WholesalePrice__c</formula>
    <label>fm_WholesalePriceGap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>