force-app/main/default/objects/CompetitorPrice__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <label>Month</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1월</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2월</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3월</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4월</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5월</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>6월</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>7월</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>8월</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>9월</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10월</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>11월</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>12월</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>